// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros assignment: assignment 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    I HAS A VAR
    VAR R 3
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    I HAS A VAR
    VAR R 3
    KTHXBYE
\`;

"
`;

exports[`macros builtins: builtins 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
        I HAS A thing ITS 10
        I HAS A aval ITS true
        I HAS A bval ITS false
        thing R NOT 10
        thing R BOTH SAEM aval AN bval
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
        I HAS A thing ITS 10
        I HAS A aval ITS true
        I HAS A bval ITS false
        thing R NOT 10
        thing R BOTH SAEM aval AN bval
    KTHXBYE
\`;

"
`;

exports[`macros declaration with value: declaration with value 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    I HAS A VAR ITS 10
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    I HAS A VAR ITS 10
    KTHXBYE
\`;

"
`;

exports[`macros declaration: declaration 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    I HAS A VAR
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    I HAS A VAR
    KTHXBYE
\`;

"
`;

exports[`macros elseif: elseif 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    IT R BOTH SAEM 1 AN 2 
    O RLY?
        YA RLY
            VISIBLE WIN
        MEBBE BOTH SAEM IT AN false
            VISIBLE \\"MEBBE\\"
        NO WAI
            VISIBLE FAIL
    OIC
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    IT R BOTH SAEM 1 AN 2 
    O RLY?
        YA RLY
            VISIBLE WIN
        MEBBE BOTH SAEM IT AN false
            VISIBLE \\"MEBBE\\"
        NO WAI
            VISIBLE FAIL
    OIC
    KTHXBYE
\`;

"
`;

exports[`macros functioncall: functioncall 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    HOW DUZ I IZCOLOR YR COLOR
        VISIBLE COLOR
    IF U SAY SO
    IZCOLOR \\"yellow\\" MKAY
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    HOW DUZ I IZCOLOR YR COLOR
        VISIBLE COLOR
    IF U SAY SO
    IZCOLOR \\"yellow\\" MKAY
    KTHXBYE
\`;

"
`;

exports[`macros functiondefinition with args: functiondefinition with args 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    HOW DUZ I IZCOLOR YR COLOR
        VISIBLE color
    IF U SAY SO
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    HOW DUZ I IZCOLOR YR COLOR
        VISIBLE color
    IF U SAY SO
    KTHXBYE
\`;

"
`;

exports[`macros functiondefinition with return: functiondefinition with return 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    HOW DUZ I IZCOLOR YR COLOR
        FOUND YR color
    IF U SAY SO
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    HOW DUZ I IZCOLOR YR COLOR
        FOUND YR color
    IF U SAY SO
    KTHXBYE
\`;

"
`;

exports[`macros functiondefinition: functiondefinition 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    HOW DUZ I IZYELLOW
        VISIBLE \\"yellow\\"
    IF U SAY SO
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    HOW DUZ I IZYELLOW
        VISIBLE \\"yellow\\"
    IF U SAY SO
    KTHXBYE
\`;

"
`;

exports[`macros gimmeh: gimmeh 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    I HAS A val
    GIMMEH val
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    I HAS A val
    GIMMEH val
    KTHXBYE
\`;

"
`;

exports[`macros hello world: hello world 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    VISIBLE \\"HAI WORLD!\\"
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    VISIBLE \\"HAI WORLD!\\"
    KTHXBYE
\`;

"
`;

exports[`macros if: if 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    IT R BOTH SAEM 1 AN 2 
    O RLY?
        YA RLY
            VISIBLE WIN
        NO WAI
            VISIBLE FAIL
    OIC
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    IT R BOTH SAEM 1 AN 2 
    O RLY?
        YA RLY
            VISIBLE WIN
        NO WAI
            VISIBLE FAIL
    OIC
    KTHXBYE
\`;

"
`;

exports[`macros implicit return: implicit return 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    HOW DUZ I IZYELLOW
        I HAS A val ITS true
        IT R val
    IF U SAY SO
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    HOW DUZ I IZYELLOW
        I HAS A val ITS true
        IT R val
    IF U SAY SO
    KTHXBYE
\`;

"
`;

exports[`macros loop: loop 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    I HAS A i ITS 0
    IM IN YR loopy UPPIN YR i TIL BOTH SAEM i AN 10
        VISIBLE SUM OF i AN 1
    IM OUTTA YR loopy
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    I HAS A i ITS 0
    IM IN YR loopy UPPIN YR i TIL BOTH SAEM i AN 10
        VISIBLE SUM OF i AN 1
    IM OUTTA YR loopy
    KTHXBYE
\`;

"
`;

exports[`macros noop: noop 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    O NVM
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    O NVM
    KTHXBYE
\`;

"
`;

exports[`macros return: return 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    HOW DUZ I IZYELLOW
        I HAS A val ITS true
        FOUND YR val
    IF U SAY SO
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    HOW DUZ I IZYELLOW
        I HAS A val ITS true
        FOUND YR val
    IF U SAY SO
    KTHXBYE
\`;

"
`;

exports[`macros switch with break: switch with break 1`] = `
"
import { lolcode } from '../../dist/lolcode-babel-macro';
const code = lolcode\`
    HAI
    IT R BOTH SAEM \\"lolcode\\" AN \\"lolcat\\"
    WTF?
        OMG true
            VISIBLE \\"is true\\"
            GTFO
        OMG false
            VISIBLE \\"nah\\"
            GTFO
        OMGWTF
            VISIBLE \\"trinary?\\"
    OIC
    KTHXBYE
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { lolcode } from \\"../../dist/lolcode-babel-macro\\";
const code = lolcode\`
    HAI
    IT R BOTH SAEM \\"lolcode\\" AN \\"lolcat\\"
    WTF?
        OMG true
            VISIBLE \\"is true\\"
            GTFO
        OMG false
            VISIBLE \\"nah\\"
            GTFO
        OMGWTF
            VISIBLE \\"trinary?\\"
    OIC
    KTHXBYE
\`;

"
`;
